tests/cli/snapshots/cli__check__error_on_warnings_exits_failure.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - "--error-on-warnings"
    - unused
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
warning: "Common.unused"  [unused-key]
  --> ./messages/en.json:1:1
  = note: ("Unused")


✘ 1 problems (0 errors, 1 warning)

----- stderr -----
