tests/cli/snapshots/cli__check__hardcoded_text.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Messages directory './messages' does not exist.
Hint: Check your .glotrc.json 'messagesDir' setting.
