tests/cli/snapshots/cli__check__help.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - "--help"
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
A fast CLI tool for checking i18n issues in Next.js projects

Usage: glot [COMMAND]

Commands:
  check     Check for i18n issues (hardcoded text, missing keys, orphan keys, untranslated values)
  clean     Remove unused or orphan translation keys from JSON files
  baseline  Insert glot-disable-next-line comments to suppress existing issues
  fix       Insert glot-message-keys comments for dynamic translation keys
  init      Initialize a new .glotrc.json configuration file
  serve     Start MCP server for AI coding agents
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

----- stderr -----
