tests/cli/snapshots/cli__check__help_shows_all_eight_rules.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - "--help"
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Check for i18n issues (hardcoded text, missing keys, orphan keys, untranslated values)

Usage: glot check [OPTIONS] [CHECKS]...

Arguments:
  [CHECKS]...  [possible values: hardcoded, missing, unused, orphan, replica-lag, untranslated, type-mismatch, unresolved]

Options:
      --primary-locale <PRIMARY_LOCALE>  Primary locale (overrides config file)
      --source-root <SOURCE_ROOT>        Source code root directory (overrides config file)
      --messages-root <MESSAGES_ROOT>    Messages directory path (overrides config file)
  -v, --verbose                          Enable verbose output
      --error-on-warnings                Exit with code 1 when any warning is found
  -h, --help                             Print help

----- stderr -----
