tests/cli/snapshots/cli__check__invalid_json_in_messages.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - missing
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Primary locale 'en' messages not found in './messages'
