tests/cli/snapshots/cli__check__invalid_rule_name_error.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - invalid-rule
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'invalid-rule' for '[CHECKS]...'
  [possible values: hardcoded, missing, unused, orphan, replica-lag, untranslated, type-mismatch, unresolved]

For more information, try '--help'.
