tests/cli/snapshots/cli__check__multiple_rules_no_issues.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - hardcoded
    - missing
    - unused
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 1 source file, 2 locale files - no issues found

----- stderr -----
