tests/cli/snapshots/cli__check__multiple_rules_unused_orphan.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - unused
    - orphan
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "Common.unused"  [unused-key]
  --> ./messages/en.json:1:1
  = note: ("Unused")

warning: "Common.orphan"  [orphan-key]
  --> ./messages/zh.json:1:1
  = note: in zh ("孤儿")


✘ 2 problems (0 errors, 2 warnings)

----- stderr -----
